<resources>
    <string name="app_name">AparienciaEstilosTemas</string>
    <string name="textoHeredado">Esteb texto hereda la apariencia de texto predeterminada de android</string>
    <string name="textobiblioteca">Este texto hereda de una biblioteca</string>
    <string name="textoLargo">Este texto extiende el tamaño de letra del el estilo del primer texto</string>
    <string name="textApp">El estilo de este texto es por textAppearance</string>
    <string name="btnBorderless">Boton sin bordes</string>
    <string name="btnBordStyle">Boton sin bordes (estilo)</string>
    <string name="submit">Submit</string>
    <string name="tvSombra">Este TextView tiene una sombra</string>
</resources>